--- a/31. Capstone Project/index.html
+++ b/31. Capstone Project/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Resume</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Norbert Seres</h1>
+    <img src="https://picsum.photos/200" alt="Profile" />
+  </body>
   <footer></footer>
 </html>
